{
  "version": 4,
  "terraform_version": "0.14.8",
  "serial": 25,
  "lineage": "9e1a0ae6-5c19-00e5-264c-54364cdef24b",
  "resources": [
    {
      "module": "module.subnet",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:720758062081:vpc/vpc-046b1ecd264f43af1",
            "cidr_block": "192.168.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-05d7b3fc9ab2f7514",
                "cidr_block": "192.168.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-073b26fc0e1622171",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-046b1ecd264f43af1",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-046c9153c2bb75fde",
            "owner_id": "720758062081",
            "tags": {
              "Name": "symbiosis-dev-vpc",
              "Namespace": "symbiosis",
              "Stage": "dev"
            }
          }
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:720758062081:network-acl/acl-0cf435214de1576bc",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0cf435214de1576bc",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "720758062081",
            "subnet_ids": [
              "subnet-06de3e8c791bf3b9e",
              "subnet-0e858b497277305fa"
            ],
            "tags": {
              "Attributes": "private",
              "Name": "symbiosis-dev-subnet-private",
              "Namespace": "symbiosis",
              "Stage": "dev",
              "cpco.io/subnet/type": "private"
            },
            "tags_all": {
              "Attributes": "private",
              "Name": "symbiosis-dev-subnet-private",
              "Namespace": "symbiosis",
              "Stage": "dev",
              "cpco.io/subnet/type": "private"
            },
            "vpc_id": "vpc-046b1ecd264f43af1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnet.aws_subnet.private",
            "module.subnet.data.aws_availability_zones.available",
            "module.subnet.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:720758062081:network-acl/acl-068f17fa4ca4f2430",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-068f17fa4ca4f2430",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "720758062081",
            "subnet_ids": [
              "subnet-046b92952ce519f52",
              "subnet-055db9542bab5eb66"
            ],
            "tags": {
              "Attributes": "public",
              "Name": "symbiosis-dev-subnet-public",
              "Namespace": "symbiosis",
              "Stage": "dev",
              "cpco.io/subnet/type": "public"
            },
            "tags_all": {
              "Attributes": "public",
              "Name": "symbiosis-dev-subnet-public",
              "Namespace": "symbiosis",
              "Stage": "dev",
              "cpco.io/subnet/type": "public"
            },
            "vpc_id": "vpc-046b1ecd264f43af1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnet.aws_subnet.public",
            "module.subnet.data.aws_availability_zones.available",
            "module.subnet.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-038ccdeae99eaa580",
            "id": "r-rtb-0b94585b4e604fad71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b94585b4e604fad7",
            "state": "active",
            "timeouts": {
              "create": "2m",
              "delete": "5m",
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnet.aws_route_table.public",
            "module.subnet.data.aws_vpc.default",
            "module.vpc.aws_internet_gateway.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:720758062081:route-table/rtb-01416fbbb816bbcec",
            "id": "rtb-01416fbbb816bbcec",
            "owner_id": "720758062081",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Attributes": "private",
              "Name": "symbiosis-dev-subnet-private-apse1a",
              "Namespace": "symbiosis",
              "Stage": "dev",
              "cpco.io/subnet/type": "private"
            },
            "tags_all": {
              "Attributes": "private",
              "Name": "symbiosis-dev-subnet-private-apse1a",
              "Namespace": "symbiosis",
              "Stage": "dev",
              "cpco.io/subnet/type": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-046b1ecd264f43af1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnet.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:720758062081:route-table/rtb-03bb54b19606ed665",
            "id": "rtb-03bb54b19606ed665",
            "owner_id": "720758062081",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Attributes": "private",
              "Name": "symbiosis-dev-subnet-private-apse1b",
              "Namespace": "symbiosis",
              "Stage": "dev",
              "cpco.io/subnet/type": "private"
            },
            "tags_all": {
              "Attributes": "private",
              "Name": "symbiosis-dev-subnet-private-apse1b",
              "Namespace": "symbiosis",
              "Stage": "dev",
              "cpco.io/subnet/type": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-046b1ecd264f43af1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnet.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:720758062081:route-table/rtb-0b94585b4e604fad7",
            "id": "rtb-0b94585b4e604fad7",
            "owner_id": "720758062081",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-038ccdeae99eaa580",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Attributes": "public",
              "Name": "symbiosis-dev-subnet-public",
              "Namespace": "symbiosis",
              "Stage": "dev",
              "cpco.io/subnet/type": "public"
            },
            "tags_all": {
              "Attributes": "public",
              "Name": "symbiosis-dev-subnet-public",
              "Namespace": "symbiosis",
              "Stage": "dev",
              "cpco.io/subnet/type": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-046b1ecd264f43af1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnet.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-035dca5a6181cb854",
            "route_table_id": "rtb-01416fbbb816bbcec",
            "subnet_id": "subnet-06de3e8c791bf3b9e"
          },
          "dependencies": [
            "module.subnet.aws_route_table.private",
            "module.subnet.aws_subnet.private",
            "module.subnet.data.aws_availability_zones.available",
            "module.subnet.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0650ca7f0c271c9b5",
            "route_table_id": "rtb-03bb54b19606ed665",
            "subnet_id": "subnet-0e858b497277305fa"
          },
          "dependencies": [
            "module.subnet.aws_route_table.private",
            "module.subnet.aws_subnet.private",
            "module.subnet.data.aws_availability_zones.available",
            "module.subnet.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f895440b949d0f84",
            "route_table_id": "rtb-0b94585b4e604fad7",
            "subnet_id": "subnet-046b92952ce519f52"
          },
          "dependencies": [
            "module.subnet.aws_route_table.public",
            "module.subnet.aws_subnet.public",
            "module.subnet.data.aws_availability_zones.available",
            "module.subnet.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-083d59f61dab4e425",
            "route_table_id": "rtb-0b94585b4e604fad7",
            "subnet_id": "subnet-055db9542bab5eb66"
          },
          "dependencies": [
            "module.subnet.aws_route_table.public",
            "module.subnet.aws_subnet.public",
            "module.subnet.data.aws_availability_zones.available",
            "module.subnet.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:720758062081:subnet/subnet-06de3e8c791bf3b9e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "192.168.0.0/18",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06de3e8c791bf3b9e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "720758062081",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Attributes": "private",
              "Name": "symbiosis-dev-subnet-private-apse1a",
              "Namespace": "symbiosis",
              "Stage": "dev",
              "cpco.io/subnet/type": "private"
            },
            "tags_all": {
              "Attributes": "private",
              "Name": "symbiosis-dev-subnet-private-apse1a",
              "Namespace": "symbiosis",
              "Stage": "dev",
              "cpco.io/subnet/type": "private"
            },
            "vpc_id": "vpc-046b1ecd264f43af1"
          },
          "dependencies": [
            "module.subnet.data.aws_availability_zones.available",
            "module.subnet.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:720758062081:subnet/subnet-0e858b497277305fa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "192.168.64.0/18",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e858b497277305fa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "720758062081",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Attributes": "private",
              "Name": "symbiosis-dev-subnet-private-apse1b",
              "Namespace": "symbiosis",
              "Stage": "dev",
              "cpco.io/subnet/type": "private"
            },
            "tags_all": {
              "Attributes": "private",
              "Name": "symbiosis-dev-subnet-private-apse1b",
              "Namespace": "symbiosis",
              "Stage": "dev",
              "cpco.io/subnet/type": "private"
            },
            "vpc_id": "vpc-046b1ecd264f43af1"
          },
          "dependencies": [
            "module.subnet.data.aws_availability_zones.available",
            "module.subnet.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:720758062081:subnet/subnet-046b92952ce519f52",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "192.168.128.0/18",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-046b92952ce519f52",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "720758062081",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Attributes": "public",
              "Name": "symbiosis-dev-subnet-public-apse1a",
              "Namespace": "symbiosis",
              "Stage": "dev",
              "cpco.io/subnet/type": "public"
            },
            "tags_all": {
              "Attributes": "public",
              "Name": "symbiosis-dev-subnet-public-apse1a",
              "Namespace": "symbiosis",
              "Stage": "dev",
              "cpco.io/subnet/type": "public"
            },
            "vpc_id": "vpc-046b1ecd264f43af1"
          },
          "dependencies": [
            "module.subnet.data.aws_availability_zones.available",
            "module.subnet.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:720758062081:subnet/subnet-055db9542bab5eb66",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "192.168.192.0/18",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-055db9542bab5eb66",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "720758062081",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Attributes": "public",
              "Name": "symbiosis-dev-subnet-public-apse1b",
              "Namespace": "symbiosis",
              "Stage": "dev",
              "cpco.io/subnet/type": "public"
            },
            "tags_all": {
              "Attributes": "public",
              "Name": "symbiosis-dev-subnet-public-apse1b",
              "Namespace": "symbiosis",
              "Stage": "dev",
              "cpco.io/subnet/type": "public"
            },
            "vpc_id": "vpc-046b1ecd264f43af1"
          },
          "dependencies": [
            "module.subnet.data.aws_availability_zones.available",
            "module.subnet.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:720758062081:internet-gateway/igw-038ccdeae99eaa580",
            "id": "igw-038ccdeae99eaa580",
            "owner_id": "720758062081",
            "tags": {
              "Name": "symbiosis-dev-vpc",
              "Namespace": "symbiosis",
              "Stage": "dev"
            },
            "tags_all": {
              "Name": "symbiosis-dev-vpc",
              "Namespace": "symbiosis",
              "Stage": "dev"
            },
            "vpc_id": "vpc-046b1ecd264f43af1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:720758062081:vpc/vpc-046b1ecd264f43af1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-07079d8e6d86183a7",
            "default_route_table_id": "rtb-046c9153c2bb75fde",
            "default_security_group_id": "sg-06c77c11101390d25",
            "dhcp_options_id": "dopt-073b26fc0e1622171",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-046b1ecd264f43af1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-046c9153c2bb75fde",
            "owner_id": "720758062081",
            "tags": {
              "Name": "symbiosis-dev-vpc",
              "Namespace": "symbiosis",
              "Stage": "dev"
            },
            "tags_all": {
              "Name": "symbiosis-dev-vpc",
              "Namespace": "symbiosis",
              "Stage": "dev"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}